@@ -6,6 +6,7 @@ Revision history for Rex
  [BUG FIXES]
 
  [DOCUMENTATION]
+ - Clarify sudo usage for multiple commands
 
  [ENHANCEMENTS]
 
